styles/mobilefirst.css
@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap");
:root {
  font-family: "Montserrat", sans-serif;
  font-size: 16px;
  --green: #67663f;
  --brown: #53372d;
  color: var(--brown);
}
.wrapper{
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}
button {
  outline: none !important;
  color: #ffffff;
  border: 2px solid #53372d;
  font-family: "Montserrat", sans-serif;
  font-style: normal;
  display: inline-block;
  margin: 0.5rem;
  padding: 0.5rem;
  background: var(--brown);
  box-shadow: 2px 4px 8px rgba(0, 0, 0, 0.25);
  border-radius: 8px;
  transition: 300ms ease-in-out;
}
button:hover {
  background: transparent;
  color: var(--brown);
}
.titlewrap {
  display: inline-flex;
  align-items: center;
  font-size: 24px;
  font-weight: bold;
  cursor: hand;
}
.greetbox {
  flex-direction: column-reverse;
  align-items: center;
}
.section{
  height: calc(100vh - 10px);
}
.profile {
  margin: 1rem;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}
.projects {
  margin: 1rem;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}
.project-holder {
  padding: 0rem;
  margin-left: 1rem;
}
.project-card {
  margin: 1rem 0 0 0;
  /* width: 320px !important; */
}
.home {
  /* margin-top: 12rem; */
  display: flex;
  justify-content: center;
  align-items: center;
}
.msg {
  margin: 0;
}
.greetimg {
  display: none;
}
.name {
  font-size: 48px;
  margin: 0;
  font-weight: bold;
  text-shadow: 2px 1px 8px rgba(0, 0, 0, 0.1);
}

.btn-holder {
  margin-top: 1rem;
}
.contacts {
  flex-wrap: wrap;
}
.skillbox {
  display: inline-flex;
  justify-content: center;
  flex-wrap: wrap;
  margin: 0.5rem;
  font-weight: 500;
}
.content {
  line-height: 22px;
}
.react {
  color: #1267b7;
}
.node {
  color: #59b312;
}
.sql {
  color: #c5b100;
}
.html {
  color: #f50d0d;
}
.flutter {
  color: #1dd0e9;
}
.ionic {
  color: #498aff;
}
.contacts {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: center;
}
.contact-card {
  width: 3rem;
  margin: 1rem;
  margin-top: 1.5rem;
  display: flex;
  padding: 1rem;
  flex-direction: column;
  background: #ffffff;
  box-shadow: 2px 4px 8px rgba(0, 0, 0, 0.25);
  border-radius: 8px;
}
.contact-icon {
  height: 3rem;
  width: 3rem;
}
.github {
  color: #333333;
}
.insta {
  color: #bc2a8d;
}
.gmail {
  color: #d44638;
}
.dribble {
  color: #ea4c89;
}
.wa {
  color: #25d366;
}
.fb {
  color: #4267b2;
}

.project-holder {
  display: flex;
  flex-direction: column;
}

.project-card {
  border-radius: 8px;
  box-shadow: 1px 1px 6px rgba(0, 0, 0, 0.25);
}
.project-card-content{
  padding: .5rem;
}
.project-card-image{
  border-radius: 8px 8px 0px 0px;
}

@media only screen and (min-width: 700px) {
  .greetbox {
    display: flex;
    flex-direction: row;
    align-content: center;
    justify-content: space-around;
    -ms-align-items: center;
    align-items: center;
  }
  .content {
    width: 60vw;
    line-height: 30px;
  }
  .greetimg {
    display: flex;
    justify-content: center;
    margin-left: 5rem;
    background: var(--green);
    border-radius: 200px;
    height: 220px;
    width: 220px;
    box-shadow: 4px 4px 24px rgba(0, 0, 0, 0.25);
  }
  .project-categories {
    display: flex;
    flex-direction: row;
    justify-content: center;
    padding: 0.5rem;
    margin: 0.5rem;
  }

  .project-holder {
    margin: 1rem;
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
  }
  .project-card {
    margin: 0.5rem;
    border-radius: 8px;
    /* box-shadow: 1px 1px 6px rgba(0, 0, 0, 0.25); */
  }
}

